doc: added writer2latex batch script to autocompile

--- a/thesis/document/tex/main.tex
+++ b/thesis/document/tex/main.tex
@@ -21,6 +21,16 @@
 
 \newpage
 
+\input{1_wstep}
+\input{2_analiza_wiedzy}
+\input{3_teoria_problemu}
+\input{4_praktyka_implementacja}
+\input{5_rezultaty_analiza}
+\input{6_zakonczenie_podsumowanie}
+
+
+
+
 \chapter{Wstęp}
 \thispagestyle{empty}
 \section {Polskie ogonki}
