--- a/thesis/document/tex/setups.tex
+++ b/thesis/document/tex/setups.tex
@@ -29,7 +29,7 @@
 
 \widowpenalty = 10000 % nie pozostawia wdów na koncu strony
 \clubpenalty = 10000 % nie pozostawia sierot
-\brokenpenalty = 10000 % nie dzieli stron jeśli pdoział wyrazu
+\brokenpenalty = 10000 % nie dzieli stron jeśli podział wyrazu
 \sloppy % zakaz wydłużania linii (gdy nie można złożyć)
 
 
