--- a/thesis/document/tex/titlepage.tex
+++ b/thesis/document/tex/titlepage.tex
@@ -25,10 +25,13 @@
 				\vspace*{4.0cm}
 				\begin{flushright}
 					\begin{minipage}{7cm}
-						Praca dyplomowa inżynierska\\
-						napisana pod kierunkiem\\
-						\textbf{dra Remigiusza Olejnika}\\
-						w Katedrze Architektury Komputerów i Telekomunikacji
+						%Praca dyplomowa inżynierska\\
+						%napisana pod kierunkiem\\
+						%\textbf{dra Remigiusza Olejnika}\\
+						%w Katedrze Architektury Komputerów i Telekomunikacji
+						Promotor:\\
+						\textbf{dr Remigiusz Olejnik}\\
+						Katedra Architektury Komputerów i~Telekomunikacji
 					\end{minipage}
 				\end{flushright}
 			\fontsize{16}{16}\selectfont
