thesis: small cmf fixes, doc template

--- a/thesis/document/tex/main.tex
+++ b/thesis/document/tex/main.tex
@@ -1,4 +1,4 @@
-\documentclass [a4paper, fleqn, 12pt, twoside] {mwbk}
+\documentclass [a4paper, fleqn, 12pt, oneside] {mwbk}
 
 \usepackage [OT4] {fontenc}
 \usepackage [utf8] {inputenc}
