thesis: removed makeidx, fixed hyperref for table of contents

--- a/thesis/document/tex/main.tex
+++ b/thesis/document/tex/main.tex
@@ -39,6 +39,8 @@
 %\pagenumbering{arabic}
 \frontmatter
 
+\cleardoublepage
+\pdfbookmark{\contentsname}{toc}
 \tableofcontents
 \setcounter{page}{8}
 
@@ -69,8 +71,8 @@
 \newpage
 \listoftables
 
-\newpage
-\printindex
+%\newpage
+%\printindex
 
 
 \newpage
