--- a/thesis/document/tex/setups.tex
+++ b/thesis/document/tex/setups.tex
@@ -2,13 +2,11 @@
 \author {Łukasz Stolcman}
 \title {Dekoder sygnału wzorca czasu DCF77 z~wykorzystaniem radia programowalnego i~FPGA}
 
-
 \usepackage {graphicx}
 
 \usepackage {amsmath}
 
 \usepackage [unicode]{hyperref}
-
 
 \makeatletter
 \hypersetup {pdfauthor={\@author}}
@@ -21,13 +19,9 @@
 
 \usepackage {caption}
 
-\usepackage {makeidx}
-
-
+%\usepackage {makeidx}
 
 \usepackage {xcolor}
-
-
 
 
 \widowpenalty = 10000 % nie pozostawia wdów na koncu strony
@@ -35,9 +29,5 @@
 \brokenpenalty = 10000 % nie dzieli stron jeśli podział wyrazu
 \sloppy % zakaz wydłużania linii (gdy nie można złożyć)
 
-
-
-
-
-\makeindex
+%\makeindex
 
