thesis: naming changes

--- a/thesis/document/tex/main.tex
+++ b/thesis/document/tex/main.tex
@@ -63,7 +63,7 @@
 
 
 \newpage
-\appendix \input {zalacznik}
+\appendix \input {appendix}
 
 \newpage
 \listoffigures
@@ -79,8 +79,8 @@
 %insert all bibliography items
 \nocite{*}
 
-\bibliographystyle{plplain}
-\bibliography{thesis}
+\bibliographystyle{plabbrv}
+\bibliography{bibliography/books,bibliography/websites}
 
 \end {document}
 
