thesis: bibliography, intro

--- a/thesis/document/tex/bibliography/books.bib
+++ b/thesis/document/tex/bibliography/books.bib
@@ -52,7 +52,7 @@
 
 @Book{bienkowski1988poradnik,
 	author = {Bieńkowski, Zdzisław},
-	title = {Poradnik ultrakótkofalowca},
+	title = {Poradnik ultrakrótkofalowca},
 	publisher = {Wydawnictwa Komunikacji i Łączności},
 	year = {1988},
 	address = {Warszawa},
