--- a/thesis/document/tex/bibliography/websites.bib
+++ b/thesis/document/tex/bibliography/websites.bib
@@ -3,12 +3,11 @@
 % http://www.ottobib.com/ 
 %
 
-@Preamble{ {\providecommand{\noopsort}[1]{}} }
-
-@misc{bworld,
-	author = {Ingo Lütkebohle},
-	title = {\textit{BWorld Robot Control Software}},
-	howpublished = {\url{http://aiweb.techfak.uni-bielefeld.de/content/bworld-robot-control-software/}},
-	year = {2008}, 
-	note = "Dostęp 23.02.2016"
+@misc{lin13pcbadc,
+	author = {Derek Redmayne},
+	title = {\textit{A Short Course in PCB Layout for High-Speed ADCs}},
+	howpublished = {\url{http://www.linear.com/solutions/1809}},
+	year = {2013}, 
+	note = "Dostęp 25.02.2016"
 }
+
