--- a/thesis/document/tex/glossary.tex
+++ b/thesis/document/tex/glossary.tex
@@ -18,3 +18,7 @@
 
 \newglossaryentry{dcf77}{name={DCF77}, description={--- Niemiecki sygnał czasu nadawany na falach długich}}
 
+\newglossaryentry{usrp}{name={USRP}, description={(\textit{ang. Universal Software Radio Peripheral}) --- seria urządzeń \gls{sdr} zaprojektowanych przez firmę \href{https://www.ettus.com/}{Ettus Research}}}
+
+\newglossaryentry{sdr}{name={SDR}, description={(\textit{ang. Software Defined Radio}) --- system radiowy w którym większosć tradycyjnych elementów odbiorczych (lub nadawczych) została zastąpiona oprogramowaniem}}
+
