thesis: added bib, fixed porzadki.pl

--- a/thesis/document/tex/bibliography/books.bib
+++ b/thesis/document/tex/bibliography/books.bib
@@ -17,7 +17,7 @@
 @Book{szabatin2003podstawy,
 	author = {Szabatin, Jerzy},
 	title = {Podstawy teorii sygnałów},
-	publisher = {Wydawnictwa Komunikacji i Łączności},
+	publisher = {Wydawnictwa Komunikacji i~Łączności},
 	year = {2003},
 	address = {Warszawa},
 	isbn = {978-83-206-1331-5}
@@ -26,7 +26,7 @@
 @Book{wesolowski2003podstawy,
 	author = {Wesołowski, Krzysztof},
 	title = {Podstawy cyfrowych systemów telekomunikacyjnych},
-	publisher = {Wydawnictwa Komunikacji i Łączności},
+	publisher = {Wydawnictwa Komunikacji i~Łączności},
 	year = {2003},
 	address = {Warszawa},
 	isbn = {83-206-1508-9}
@@ -34,7 +34,7 @@
 
 @Book{lipinski2001modulacja,
 	author = {Lipiński, Wojciech},
-	title = {Modulacja, kodowanie i transmisja w systemach telekomunikacyjnych},
+	title = {Modulacja, kodowanie i~transmisja w~systemach telekomunikacyjnych},
 	publisher = {Wydawnictwo Uczelniane Politechniki Szczecińskiej},
 	year = {2001},
 	address = {Szczecin},
@@ -44,7 +44,7 @@
 @Book{horowitz2009sztuka,
 	author = {Horowitz, Paul},
 	title = {Sztuka elektroniki},
-	publisher = {Wydawnictwa Komunikacji i Łączności},
+	publisher = {Wydawnictwa Komunikacji i~Łączności},
 	year = {2009},
 	address = {Warszawa},
 	isbn = {9788320611281}
@@ -53,7 +53,7 @@
 @Book{bienkowski1988poradnik,
 	author = {Bieńkowski, Zdzisław},
 	title = {Poradnik ultrakrótkofalowca},
-	publisher = {Wydawnictwa Komunikacji i Łączności},
+	publisher = {Wydawnictwa Komunikacji i~Łączności},
 	year = {1988},
 	address = {Warszawa},
 	isbn = {8320607167}
@@ -88,7 +88,7 @@
 
 @Book{bialasiewicz2004falki,
 	author = {Białasiewicz, Jan},
-	title = {Falki i aproksymacje},
+	title = {Falki i~aproksymacje},
 	publisher = {Wydawnictwa Naukowo-Techniczne},
 	year = {2004},
 	address = {Warszawa},
@@ -97,7 +97,7 @@
 
 @Book{zielinski2014cyfrowe,
 	author = {Zieliński, Tomasz},
-	title = {Cyfrowe przetwarzanie sygnałów w telekomunikacji: podstawy, multimedia, transmisja},
+	title = {Cyfrowe przetwarzanie sygnałów w~telekomunikacji: podstawy, multimedia, transmisja},
 	publisher = {Wydawnictwo Naukowe PWN},
 	year = {2014},
 	address = {Warszawa},
@@ -106,7 +106,7 @@
 
 @Book{smith2007cyfrowe,
 	author = {Smith, Steven},
-	title = {Cyfrowe przetwarzanie sygnałów: praktyczny poradnik dla inżynierów i naukowców},
+	title = {Cyfrowe przetwarzanie sygnałów: praktyczny poradnik dla inżynierów i~naukowców},
 	publisher = {Wydawnictwo BTC},
 	year = {2007},
 	address = {Warszawa},
@@ -115,7 +115,7 @@
 
 @Book{lipinski2003transmisja,
 	author = {Lipiński, Wojciech},
-	title = {Transmisja danych w telefonii komórkowej},
+	title = {Transmisja danych w~telefonii komórkowej},
 	publisher = {Wydawnictwo Uczelniane Politechniki Szczecińskiej},
 	year = {2003},
 	address = {Szczecin},
@@ -143,7 +143,7 @@
 @Book{zlelinski2007cyfrowe,
 	author = {Zieliński, Tomasz},
 	title = {Cyfrowe przetwarzanie sygnałów: od teorii do zastosowań},
-	publisher = {Wydawnictwa Komunikacji i Łączności},
+	publisher = {Wydawnictwa Komunikacji i~Łączności},
 	year = {2007},
 	address = {Warszawa},
 	isbn = {9788320616408}
@@ -161,7 +161,7 @@
 @Book{wilkinson2003uklady,
 	author = {Wilkinson, Barry},
 	title = {Układy cyfrowe},
-	publisher = {Wydawnictwa Komunikacji i Łączności},
+	publisher = {Wydawnictwa Komunikacji i~Łączności},
 	year = {2003},
 	address = {Warszawa},
 	isbn = {8320613272}
@@ -169,7 +169,7 @@
 
 @Book{tariov2008wprowadzenie,
 	author = {{\noopsort{Tariov}}{Ţariov}, Aleksandr},
-	title = {Wprowadzenie do modelowania sygnałów telekomunikacyjnych w środowisku Matlab-Simulink},
+	title = {Wprowadzenie do modelowania sygnałów telekomunikacyjnych w~środowisku Matlab-Simulink},
 	publisher = {Wydawnictwo Uczelniane Politechniki Szczecińskiej},
 	year = {2008},
 	address = {Szczecin},
@@ -196,7 +196,7 @@
 
 @Book{majewski2007uklady,
 	author = {Majewski, Jacek},
-	title = {Układy FPGA w przykładach},
+	title = {Układy FPGA w~przykładach},
 	publisher = {Wydawnictwo BTC},
 	year = {2007},
 	address = {Warszawa},
@@ -205,7 +205,7 @@
 
 @Book{janos2004vademecum,
 	author = {Janoś, Tomasz},
-	title = {Vademecum teleinformatyka III: komunikacja mobilna, bezpieczeństwo, technologie i protokoły sieciowe},
+	title = {Vademecum teleinformatyka III: komunikacja mobilna, bezpieczeństwo, technologie i~protokoły sieciowe},
 	publisher = {IDG Poland},
 	year = {2004},
 	address = {Warszawa},
