--- a/thesis/document/tex/bibliography/papers.bib
+++ b/thesis/document/tex/bibliography/papers.bib
@@ -13,7 +13,7 @@
 
 @article{john85sdr,
 	author  = {P Johnson}, 
-	title   = {New research lab leads to unique radio receiver},
+	title   = {\textit{New research lab leads to unique radio receiver}},
 	journal = {E-Systems Team},
 	year    = 1985,
 	number  = 4,
@@ -23,11 +23,20 @@
 
 @article{mitola92sr,
 	author  = {Joe Mitola}, 
-	title   = {Software Radios: Survey, Critical Evaluation and Future Directions},
+	title   = {\textit{Software Radios: Survey, Critical Evaluation and Future Directions}},
 	journal = {IEEE Aerospace and Electronic Systems Magazine},
 	year    = 1993,
 	number  = 4,
 	pages   = {25-36},
 	volume  = 8
+}
+
+@article{bauch09dcf,
+	author  = {Andreas Bauch and Peter Hetzel and Dirk Piester}, 
+	title   = {\textit{Time and Frequency Dissemination with {DCF77}: From 1959 to 2009 and beyond}},
+	journal = {PTB-Mitteilungen},
+	year    = 2009,
+	number  = 3,
+	volume  = 119
 }
 
