--- a/thesis/document/tex/glossary.tex
+++ b/thesis/document/tex/glossary.tex
@@ -22,3 +22,7 @@
 
 \newglossaryentry{sdr}{name={SDR}, description={(\textit{ang. Software Defined Radio}) --- system radiowy w którym większosć tradycyjnych elementów odbiorczych (lub nadawczych) została zastąpiona oprogramowaniem}}
 
+\newglossaryentry{itu}{name={ITU}, description={(\textit{ang. International Telecommunication Union}) --- organizacja ustanowiona przez ONZ w celu standaryzacji i regulowania rynku tele- i radiokomunikacyjnego}}
+
+\newglossaryentry{bcd}{name={BCD}, description={(\textit{ang. Binary-Coded Decimal}) --- system zapisu kolejnych cyfr liczby przy użyciu 4 młodszych bitów w reprezentacji dwójkowej tych cyfr}}
+
