thesis: correct bibliography naming

--- a/thesis/document/tex/bibliography/books.bib
+++ b/thesis/document/tex/bibliography/books.bib
@@ -96,7 +96,7 @@
 }
 
 @Book{zielinski2014cyfrowe,
-	author = {Zieliński, Tomasz},
+	author = {Zieliński, Tomasz and Korohoda, Przemysław and Rumian, Roman},
 	title = {Cyfrowe przetwarzanie sygnałów w~telekomunikacji: podstawy, multimedia, transmisja},
 	publisher = {Wydawnictwo Naukowe PWN},
 	year = {2014},
