--- a/thesis/document/tex/main.tex
+++ b/thesis/document/tex/main.tex
@@ -53,7 +53,7 @@
 \input{thesis}
 
 
-\linespread{1.0}
+%\linespread{1.0}
 \newpage
 \glsaddall
 \printglossary
@@ -72,7 +72,7 @@
 %insert all bibliography items
 \nocite{*}
 
-\bibliographystyle{plabbrv}
+\bibliographystyle{bibliography/plabbrv}
 \bibliography{bibliography/books,bibliography/datasheets,bibliography/papers}
 
 \end {document}
