doc: thesis acknowledgement and abstract, misc files

--- a/thesis/document/tex/main.tex
+++ b/thesis/document/tex/main.tex
@@ -44,12 +44,16 @@
 
 %\pagenumbering{arabic}
 
+\input{acknowledgement}
+\input{abstract}
+\newpage
+
 \cleardoublepage
 \pdfbookmark{\contentsname}{toc}
 \tableofcontents
 
-\setcounter{page}{8}
-
+\frontmatter
+\setcounter{page}{666}
 \input{thesis_plfixed}
 
 
