--- a/thesis/document/tex/titlepage.tex
+++ b/thesis/document/tex/titlepage.tex
@@ -18,28 +18,27 @@
 				\vspace*{0.2cm}
 			\fontsize{12}{12}\selectfont
 				Kierunek Informatyka\\
-				\vspace*{0.5cm}
+				\vspace*{1.5cm}
 			\fontsize{18}{18}\selectfont
 				\textbf{\@title}\\
 			\fontsize{12}{12}\selectfont
-				\vspace*{4.0cm}
+				\vspace*{2.0cm}
 				\begin{flushright}
 					\begin{minipage}{7cm}
-						%Praca dyplomowa inżynierska\\
-						%napisana pod kierunkiem\\
-						%\textbf{dra Remigiusza Olejnika}\\
-						%w Katedrze Architektury Komputerów i Telekomunikacji
-						Promotor:\\
-						\textbf{dr Remigiusz Olejnik}\\
-						Katedra Architektury Komputerów i~Telekomunikacji
+						Praca dyplomowa inżynierska\\
+						napisana pod kierunkiem\\
+						\textbf{dra Remigiusza Olejnika}\\
+						w Katedrze Architektury Komputerów i Telekomunikacji
+						%Promotor:\\
+						%\textbf{dr Remigiusz Olejnik}\\
+						%Katedra Architektury Komputerów i~Telekomunikacji
 					\end{minipage}
 				\end{flushright}
 			\fontsize{16}{16}\selectfont
 				\vspace*{2cm}
-				Szczecin 2016\\
+				Szczecin, 2016\\
 		\end{center}
 	\end{titlepage}
 }
 \makeatother
-
 
