doc: thesis appendixes, title page, acknoledgement, formatting etc

--- a/thesis/document/tex/abstract.tex
+++ b/thesis/document/tex/abstract.tex
@@ -8,7 +8,15 @@
 }
 \vspace*{0.5cm}
 
- Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam ullamcorper odio non posuere venenatis. Duis pellentesque, enim non malesuada vulputate, lorem magna lacinia augue, a malesuada ante nibh eget augue. Donec sed nunc ac lectus laoreet pharetra condimentum rhoncus tellus. Aliquam dapibus laoreet quam pulvinar volutpat. Phasellus sit amet quam condimentum, pretium odio in, euismod leo. Etiam gravida ante at arcu tincidunt suscipit. Cras ultricies aliquam elit, sed lacinia arcu tincidunt sed. Nam condimentum massa sit amet odio aliquet, nec blandit lorem rutrum. Ut placerat mauris tortor, sed convallis quam cursus consequat. Nunc efficitur rhoncus pretium. Integer posuere efficitur tortor, non ultrices tellus aliquam eu. Nam nec felis turpis. Duis tincidunt lobortis leo, pharetra pulvinar risus congue vitae. Vivamus et porttitor nisl.
+Praca dyplomowa obejmuje badania zagadnień przetwarzania sygnałów,
+w~szczególności radiowych. Prezentowany projekt ma na celu zastosowanie
+techniki programowalnego radia w~środowisku \gls{fpga}. Implementacja sprzętowa
+to zaprojektowana przez autora płytka drukowana, w~której użyto układów
+radiowych, zadaniem których jest wstępna obróbka oraz przetworzenie sygnału
+z~postaci analogowej do cyfrowej. Implementacja programowa to projekt \gls{fpga}
+w~języku opisu sprzętu \gls{verilog}, w~którym zapisano algorytm przetwarzający
+sygnał wejściowy. Ostatnim etapem jest aplikacja \gls{pc} w~języku Python, która
+interpretuje przesłane przez układ dane.
 
 \vspace*{1.5cm}
 {
