--- a/thesis/document/tex/glossary.tex
+++ b/thesis/document/tex/glossary.tex
@@ -18,11 +18,13 @@
 
 \newglossaryentry{dcf77}{name={DCF77}, description={--- Niemiecki sygnał czasu nadawany na falach długich}}
 
-\newglossaryentry{usrp}{name={USRP}, description={(\textit{ang. Universal Software Radio Peripheral}) --- seria urządzeń \gls{sdr} zaprojektowanych przez firmę \href{https://www.ettus.com/}{Ettus Research}}}
-
 \newglossaryentry{sdr}{name={SDR}, description={(\textit{ang. Software Defined Radio}) --- system radiowy w którym większosć tradycyjnych elementów odbiorczych (lub nadawczych) została zastąpiona oprogramowaniem}}
 
 \newglossaryentry{itu}{name={ITU}, description={(\textit{ang. International Telecommunication Union}) --- organizacja ustanowiona przez ONZ w celu standaryzacji i regulowania rynku tele- i radiokomunikacyjnego}}
 
-\newglossaryentry{bcd}{name={BCD}, description={(\textit{ang. Binary-Coded Decimal}) --- system zapisu kolejnych cyfr liczby przy użyciu 4 młodszych bitów w reprezentacji dwójkowej tych cyfr}}
+\newglossaryentry{bcd}{name={BCD}, description={(\textit{ang. Binary-Coded Decimal}) --- sposób zapisu cyfr liczby dziesiętnej polegający na użyciu jej 4 młodszych bitów w reprezentacji binarnej}}
+
+\newglossaryentry{pc}{name={PC}, description={(\textit{ang. Personal Computer}) --- komputer osobisty}}
+
+\newglossaryentry{dvbt}{name={DVB-T}, description={(\textit{ang.Digital Video Broadcasting -- Terrestrial}) --- standard cyfrowej telewizji naziemnej}}
 
