doc: first chapter

--- a/thesis/document/tex/glossary.tex
+++ b/thesis/document/tex/glossary.tex
@@ -28,3 +28,5 @@
 
 \newglossaryentry{dvbt}{name={DVB-T}, description={(\textit{ang.Digital Video Broadcasting -- Terrestrial}) --- standard cyfrowej telewizji naziemnej}}
 
+\newglossaryentry{adc}{name={ADC}, description={(\textit{ang. Analog to Digital Converter}) --- przetwornik analogowo-cyfrowy}}
+
