--- a/thesis/document/tex/main.tex
+++ b/thesis/document/tex/main.tex
@@ -14,6 +14,15 @@
 
 \include {setups}
 
+
+
+%\usepackage[section]{placeins}
+
+% change image padding after caption
+% http://tex.stackexchange.com/a/23315
+\setlength{\belowcaptionskip}{-10pt}
+
+
 % zmiana geometrii dokumentu
 \usepackage {geometry}
 
