doc: thesis text updated

--- a/thesis/document/tab.dcf77.tex
+++ b/thesis/document/tab.dcf77.tex
@@ -3,7 +3,7 @@
 \begin{center} 
     \begin{tabular}{|c|c|c|}
     \hline
-    Bit   & Symbol bitu & Grupa                                                            \\ \hline \hline
+	\textbf{Bit}   & \textbf{Symbol bitu} & \textbf{Grupa}                                                            \\ \hline \hline
 	0     & M     & \minibox[c]{początek minuty (zawsze 0)}                                      \\ \hline \hline
 	1-14  & --     & \minibox[c]{informacja pogodowa\\(Meteotime)}                                 \\ \hline \hline
     15    & R     & nieprawidłowe działanie nadajnika              \\ \hline
