--- a/thesis/document/tex/abstract.tex
+++ b/thesis/document/tex/abstract.tex
@@ -14,7 +14,7 @@ techniki programowalnego radia w~środowisku \gls{fpga}. Implementacja sprzętow
 to zaprojektowana przez autora płytka drukowana, w~której użyto układów
 radiowych, zadaniem których jest wstępna obróbka oraz przetworzenie sygnału
 z~postaci analogowej do cyfrowej. Implementacja programowa to projekt \gls{fpga}
-w~języku opisu sprzętu \gls{verilog}, w~którym zapisano algorytm przetwarzający
+w~języku opisu sprzętu Verilog, w~którym zapisano algorytm przetwarzający
 sygnał wejściowy. Ostatnim etapem jest aplikacja \gls{pc} w~języku Python, która
 interpretuje przesłane przez układ dane.
 
