--- a/thesis/document/tex/glossary.tex
+++ b/thesis/document/tex/glossary.tex
@@ -1,4 +1,4 @@
-%\newglossaryentry{}{name={}, description={(\textit{ang.}) --- }}
+%\newglossaryentry{}{name={}, description={(\textit{ang. }) --- }}
 
 \newglossaryentry{gsm}{name={GSM}, description={(\textit{ang.} Global System for Mobile Communications) --- najpopularniejszy standard telefonii komórkowej drugiej generacji}}
 
@@ -12,8 +12,6 @@
 
 \newglossaryentry{cad}{name={CAD}, description={(\textit{ang. Computer Aided Design}) --- zastosowanie komputera w projektowaniu technicznym}}
 
-\newglossaryentry{verilog}{name={Verilog}, description={--- język opisu sprzętu używany przy projektowaniu, symulacji i syntezie układów cyfrowych}}
-
 \newglossaryentry{fpga}{name={FPGA}, description={(\textit{ang. Field Programmable Gate Array}) --- programowalny układ logiczny o dużym stopniu scalenia}}
 
 \newglossaryentry{dcf77}{name={DCF77}, description={--- Niemiecki sygnał czasu nadawany na falach długich}}
@@ -26,7 +24,13 @@
 
 \newglossaryentry{pc}{name={PC}, description={(\textit{ang. Personal Computer}) --- komputer osobisty}}
 
-\newglossaryentry{dvbt}{name={DVB-T}, description={(\textit{ang.Digital Video Broadcasting -- Terrestrial}) --- standard cyfrowej telewizji naziemnej}}
+\newglossaryentry{dvbt}{name={DVB-T}, description={(\textit{ang. Digital Video Broadcasting -- Terrestrial}) --- standard cyfrowej telewizji naziemnej}}
 
 \newglossaryentry{adc}{name={ADC}, description={(\textit{ang. Analog to Digital Converter}) --- przetwornik analogowo-cyfrowy}}
+
+\newglossaryentry{bnc}{name={BNC}, description={(\textit{ang. Bayonet Neill-Concelman}) --- złącze stosowane z kablem koncentrycznym, często spotykane w aparaturze pomiarowej (np. oscyloskopach)}}
+
+\newglossaryentry{smd}{name={SMD}, description={(\textit{ang. Surface-Mount Devices}) --- rodzaj elementów elektronicznych nie posiadających drutów połączeniowych a jedynie metalowe końcówki, które umożliwiają przylutowanie elementu na płytkę drukowaną bez potrzeby wiercenia otworów}}
+
+\newglossaryentry{pll}{name={PLL}, description={(\textit{ang. Phase Locked Loop}) --- układ elektroniczny działający na zasadzie sprzężenia zwrotnego, zwykle służący do automatycznej regulacji częstotliwości}}
 
