--- a/thesis/document/tex/setups.tex
+++ b/thesis/document/tex/setups.tex
@@ -40,3 +40,12 @@
 %\deffootnote[2em]{2em}{1em}{\textsuperscript{\thefootnotemark}}
 \deffootnote[2em]{2em}{1em}{\makebox[1em][l]{\textsuperscript{\thefootnotemark}}}
 
+% change image padding after caption
+% http://tex.stackexchange.com/a/23315
+\setlength{\belowcaptionskip}{-15pt}
+% http://tex.stackexchange.com/a/23316
+\setlength{\abovecaptionskip}{-7pt}
+
+%\usepackage[section]{placeins}
+
+
