doc: updated thesis

--- a/thesis/document/tex/bibliography/datasheets.bib
+++ b/thesis/document/tex/bibliography/datasheets.bib
@@ -44,3 +44,38 @@
 	year = {2012}
 }
 
+@misc{int11bypass,
+	author = "Intersil",
+	title = "\textit{AN1325: Choosing and Using Bypass Capacitors}",
+	howpublished = {\url{https://www.intersil.com/data/an/an1325.pdf}},
+	year = {2011}
+}
+
+@misc{mur10noisesup,
+	author = "Murata",
+	title = "\textit{Application Manual for Power Supply Noise Suppression and Decoupling for Digital ICs}",
+	howpublished = {\url{http://www.murata.com/~/media/webrenewal/support/library/catalog/products/emc/emifil/c39e.ashx}},
+	year = {2010}
+}
+
+@misc{sky11rfdiode,
+	author = "Skyworks",
+	title = "\textit{RF Diode Design Guide}",
+	howpublished = {\url{http://www.skyworksinc.com/downloads/literature/RF_Diode_Design_Guide.pdf}},
+	year = {2011}
+}
+
+@misc{sky08pin,
+	author = "Skyworks",
+	title = "\textit{PIN Limiter Diodes in Receiver Protectors}",
+	howpublished = {\url{http://www.skyworksinc.com/uploads/documents/200480C.pdf}},
+	year = {2008}
+}
+
+@misc{vec14sigtypes,
+	author = "Vectron",
+	title = "\textit{Signal Types and Terminators}",
+	howpublished = {\url{http://www.vectron.com/products/literature_library/Signal_Types_and_Terminations.pdf}},
+	year = {2014}
+}
+
