--- a/thesis/document/tex/bibliography/papers.bib
+++ b/thesis/document/tex/bibliography/papers.bib
@@ -7,8 +7,8 @@
 	author = {Derek Redmayne},
 	title = {\textit{A Short Course in PCB Layout for High-Speed ADCs}},
 	howpublished = {\url{http://www.linear.com/solutions/1809}},
-	year = {2013}, 
-	note = "Dostęp 25.02.2016"
+%	note = "Dostęp 25.02.2016"
+	year = 2013 
 }
 
 @article{john85sdr,
@@ -38,5 +38,12 @@
 	year    = 2009,
 	number  = 3,
 	volume  = 119
+}
+
+@article{ott01pcb,
+	author  = {{Henry W.} Ott}, 
+	title   = {\textit{Partitioning and Layout of a Mixed-Signal PCB}},
+	journal = {Printer Circuit Design \& Fab},
+	year    = 2001
 }
 
