doc: thesis update, software chapter

--- a/thesis/document/tex/bibliography/datasheets.bib
+++ b/thesis/document/tex/bibliography/datasheets.bib
@@ -6,9 +6,30 @@
 @misc{alt14cyc4dh,
 	author = "Altera",
 	title = "\textit{Cyclone IV Device Handbook}",
-	howpublished = {\url{https://www.altera.com/en_US/pdfs/literature/hb/cyclone-iv/cyiv-53001.pdf}},
+	howpublished = {\url{https://www.altera.com/literature/hb/cyclone-iv/cyclone4-handbook.pdf}},
 	year = {2014},
-	note = "Volume 3"
+	note = "Volume 1, 2, 3"
+}
+
+@misc{alt16int2ip,
+	author = "Altera",
+	title = "\textit{Introduction to Altera IP Cores}",
+	howpublished = {\url{https://www.altera.com/literature/ug/ug_intro_to_megafunctions.pdf}},
+	year = {2016},
+}
+
+@misc{alt14pllug,
+	author = "Altera",
+	title = "\textit{ALTPLL (Phase-Locked Loop) IP Core User Guide}",
+	howpublished = {\url{https://www.altera.com/literature/ug/ug_altpll.pdf}},
+	year = {2014},
+}
+
+@misc{alt15firug,
+	author = "Altera",
+	title = "\textit{FIR II IP Core User Guide}",
+	howpublished = {\url{https://www.altera.com/literature/ug/ug_fir_compiler_ii.pdf}},
+	year = {2015},
 }
 
 @misc{ter12de0man,
