--- a/thesis/document/tex/glossary.tex
+++ b/thesis/document/tex/glossary.tex
@@ -34,3 +34,5 @@
 
 \newglossaryentry{pll}{name={PLL}, description={(\textit{ang. Phase Locked Loop}) --- układ elektroniczny działający na zasadzie sprzężenia zwrotnego, zwykle służący do automatycznej regulacji częstotliwości}}
 
+\newglossaryentry{fir}{name={FIR}, description={(\textit{ang. Finite Impulse Response}) --- filtr cyfrowy o skończonej odpowiedzi impulsowej}}
+
