--- a/thesis/document/tex/setups.tex
+++ b/thesis/document/tex/setups.tex
@@ -6,8 +6,8 @@
 
 \usepackage {amsmath}
 
-%\usepackage [unicode]{hyperref}
-\usepackage [unicode,hidelinks]{hyperref}
+\usepackage [unicode]{hyperref}
+%\usepackage [unicode,hidelinks]{hyperref}
 
 \makeatletter
 \hypersetup {pdfauthor={\@author}}
