doc: thesis sections update

--- a/thesis/document/tex/glossary.tex
+++ b/thesis/document/tex/glossary.tex
@@ -36,3 +36,5 @@
 
 \newglossaryentry{fir}{name={FIR}, description={(\textit{ang. Finite Impulse Response}) --- filtr cyfrowy o skończonej odpowiedzi impulsowej}}
 
+\newglossaryentry{dtmf}{name={DTMF}, description={(\textit{ang. Dual Tone Multi Frequency}) --- system sygnalizacji pomiędzy urządzeniami telefonicznymi}}
+
