doc: thesis update

--- a/thesis/document/tex/bibliography/datasheets.bib
+++ b/thesis/document/tex/bibliography/datasheets.bib
@@ -25,6 +25,13 @@
 	year = {2014},
 }
 
+@misc{alt15fpug,
+	author = "Altera",
+	title = "\textit{Floating-Point IP Cores User Guide}",
+	howpublished = {\url{https://www.altera.com/en_US/pdfs/literature/ug/ug_altfp_mfug.pdf}},
+	year = {2015},
+}
+
 @misc{alt15firug,
 	author = "Altera",
 	title = "\textit{FIR II IP Core User Guide}",
