--- a/thesis/document/tex/src/goertzel.tex
+++ b/thesis/document/tex/src/goertzel.tex
@@ -1,25 +1,4 @@
-\lstset{ % General setup for the package
-%	language=Python,
-	basicstyle=\linespread{1.0}\small\ttfamily,
-%	numbers=left,
-%	numberstyle=\scriptsize\ttfamily,
-	xleftmargin=10pt,
-%	numbersep=-6pt,
-	frame=l,
-	framesep=0.5em,
-	tabsize=2,
-	columns=fixed,
-	showstringspaces=false,
-	showtabs=false,
-	tab=\textcolor{gray}{$\to$},
-	keepspaces,
-%	aboveskip=\bigskipamount,
-%	belowskip=\bigskipamount,
-	commentstyle=\color{red},
-	keywordstyle=\color{blue}
-}
-
-\begin{lstlisting}[caption={Algorytm Goertzla -- Python},label={lst:algg}]
+\begin{lstlisting}[language=python,caption={Algorytm Goertzla -- Python},label={lst:algg}]
 N = len(samples)
 k = int((N*freq)/sample_rate)
 w = 2.0 * np.pi / N * k
