sw: goertzel analyzer python

--- a/thesis/document/tex/bibliography/datasheets.bib
+++ b/thesis/document/tex/bibliography/datasheets.bib
@@ -39,6 +39,27 @@
 	year = {2015},
 }
 
+@misc{alt14ncoug,
+	author = "Altera",
+	title = "\textit{NCO IP Core User Guide}",
+	howpublished = {\url{https://www.altera.com/en_US/pdfs/literature/ug/ug_nco.pdf}},
+	year = {2014},
+}
+
+@misc{alt14cicug,
+	author = "Altera",
+	title = "\textit{CIC IP Core User Guide}",
+	howpublished = {\url{https://www.altera.com/en_US/pdfs/literature/ug/ug_cic.pdf}},
+	year = {2014},
+}
+
+@misc{alt07ucic,
+	author = "Altera",
+	title = "\textit{AN455: Understanding CIC Compensation Filters}",
+	howpublished = {\url{https://www.altera.com/en_US/pdfs/literature/an/an455.pdf}},
+	year = {2007},
+}
+
 @misc{ter12de0man,
 	author = "Terasic",
 	title = "\textit{DE0-Nano User Manual}",
